# chimera-logmind

./: .coveragerc  .gitignore  CRUSH.md  LICENSE  PHASE3_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  requirements-dev.txt  requirements.txt  run.sh  test_rag_chat.py
api/: config.py  db.py  embeddings.py  ingest.py  ingest_framework.py  rag_chat.py  reporting.py  security_audit.py  server.py  system_health.py
cli/: Cargo.toml
cli/src/: main.rs
docs/: TUI_ENHANCEMENT_SUMMARY.md  openapi.yaml
ops/: chimera-api.service  chimera-report.service  chimera-report.timer  install.sh
tests/: conftest.py  test_config.py  test_config_extra.py  test_db.py  test_db_more.py  test_embeddings.py  test_ingest.py  test_ingest_framework.py  test_ingest_framework_extra.py  test_reporting.py  test_security_audit.py  test_server_integration.py  test_service_file.py  test_system_health.py  test_system_health_storage.py  test_validation.py
