[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1"
urlencoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.27"
ratatui = { version = "0.27", features = ["all-widgets"] }
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "chimera"
path = "src/main.rs"

[[bin]]
name = "chimera-tui"
path = "src/bin/tui.rs"
